--- a/Avalonia_Apps/AA16_UserControl/AA16_Usercontrol1/Views/UserControlView.axaml
+++ b/Avalonia_Apps/AA16_UserControl/AA16_Usercontrol1/Views/UserControlView.axaml
@@ -1,8 +1,8 @@
 <UserControl x:Class="AA16_UserControl1.Views.UserControlView"
              xmlns="https://github.com/avaloniaui"
              xmlns:local="clr-namespace:AA16_UserControl1.Views"
-             xmlns:vm="clr-namespace:AA16_UserControl1.ViewModels"
-             x:DataType="vm:UserControlViewModel"
+             xmlns:vmi="clr-namespace:AA16_UserControl1.ViewModels.Interfaces"
+             x:DataType="vmi:IUserControlViewModel"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <Grid RowDefinitions="45*,47*">
     <local:LabeldMaxLengthTextbox Caption="Bitte Motto Eingeben" Text="{Binding Text}" Command="{Binding Do1Command}" HorizontalAlignment="Left" Margin="40,30,0,0" VerticalAlignment="Top" Width="512"/>
