--- a/GenFreeWin/GenFreeWin3/App.xaml
+++ b/GenFreeWin/GenFreeWin3/App.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:GenFreeWpf"
-    xmlns:vc2="clr-namespace:MVVM.View.ValueConverter;assembly=MVVM_BaseLib"
+    xmlns:vc2="clr-namespace:MVVM.Views.ValueConverter;assembly=MVVM_BaseLib"
     StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
