--- a/Transpiler_pp/Trnsp.Show.Lfm/App.xaml
+++ b/Transpiler_pp/Trnsp.Show.Lfm/App.xaml
@@ -1,8 +1,7 @@
-﻿<Application x:Class="Trnsp.Show.Lfm.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Trnsp.Show.Lfm">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="Trnsp.Show.Lfm.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Trnsp.Show.Lfm">
+    <Application.Resources />
 </Application>
