--- a/Transpiler_pp/Trnsp.Show.Pas/MainWindow.xaml
+++ b/Transpiler_pp/Trnsp.Show.Pas/MainWindow.xaml
@@ -1,98 +1,190 @@
-﻿<Window x:Class="Transp.Show.Pas.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Transp.Show.Pas"
-        xmlns:vm="clr-namespace:Trnsp.Show.Pas.ViewModels"
-        mc:Ignorable="d"
-        Title="Pascal Code Visualizer" Height="600" Width="1000"
-        d:DataContext="{d:DesignInstance Type=vm:MainViewModel, IsDesignTimeCreatable=True}">
+﻿<Window
+    x:Class="Transp.Show.Pas.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Transp.Show.Pas"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:Trnsp.Show.Pas.ViewModels"
+    Title="Pascal Code Visualizer"
+    Width="1000"
+    Height="600"
+    d:DataContext="{d:DesignInstance Type=vm:MainViewModel,
+                                     IsDesignTimeCreatable=True}"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="5"/>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="5"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="5" />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="5" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <!-- Toolbar -->
-        <StackPanel Grid.Row="0" Grid.ColumnSpan="5" Orientation="Horizontal" Background="#F0F0F0">
-            <Button Content="Load File" Command="{Binding LoadFileCommand}" Margin="5" Padding="5,2"/>
+        <!--  Toolbar  -->
+        <StackPanel
+            Grid.Row="0"
+            Grid.ColumnSpan="5"
+            Background="#F0F0F0"
+            Orientation="Horizontal">
+            <Button
+                Margin="5"
+                Padding="5,2"
+                Command="{Binding LoadFileCommand}"
+                Content="Load File" />
         </StackPanel>
 
-        <!-- TreeView -->
-        <TreeView x:Name="CodeStructureTreeView" Grid.Row="1" Grid.Column="0" ItemsSource="{Binding RootNodes}" BorderThickness="0"
-                  SelectedItemChanged="CodeStructureTreeView_SelectedItemChanged">
+        <!--  TreeView  -->
+        <TreeView
+            x:Name="CodeStructureTreeView"
+            Grid.Row="1"
+            Grid.Column="0"
+            BorderThickness="0"
+            ItemsSource="{Binding RootNodes}"
+            SelectedItemChanged="CodeStructureTreeView_SelectedItemChanged">
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding TypeIcon}" FontWeight="Bold" Foreground="Blue" Margin="0,0,5,0" Width="20" TextAlignment="Center"/>
-                        <TextBlock Text="{Binding DisplayInfo}"/>
+                        <TextBlock
+                            Width="20"
+                            Margin="0,0,5,0"
+                            FontWeight="Bold"
+                            Foreground="Blue"
+                            Text="{Binding TypeIcon}"
+                            TextAlignment="Center" />
+                        <TextBlock Text="{Binding DisplayInfo}" />
                     </StackPanel>
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
             <TreeView.ItemContainerStyle>
                 <Style TargetType="TreeViewItem">
-                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, FallbackValue=False}"/>
+                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, FallbackValue=False}" />
                 </Style>
             </TreeView.ItemContainerStyle>
         </TreeView>
-        
-        <!-- Splitter 1 -->
-        <GridSplitter Grid.Row="1" Grid.Column="1" Width="5" HorizontalAlignment="Stretch"/>
 
-        <!-- Source View -->
-        <TextBox x:Name="SourceCodeEditor" Grid.Row="1" Grid.Column="2" 
-                 Text="{Binding FullSourceCode, Mode=OneWay}" 
-                 IsReadOnly="True" 
-                 FontFamily="Consolas" 
-                 FontSize="14"
-                 VerticalScrollBarVisibility="Auto" 
-                 HorizontalScrollBarVisibility="Auto"
-                 AcceptsReturn="True" 
-                 BorderThickness="0"/>
+        <!--  Splitter 1  -->
+        <GridSplitter
+            Grid.Row="1"
+            Grid.Column="1"
+            Width="5"
+            HorizontalAlignment="Stretch" />
 
-        <!-- Splitter 2 -->
-        <GridSplitter Grid.Row="1" Grid.Column="3" Width="5" HorizontalAlignment="Stretch"/>
+        <!--  Source View  -->
+        <TextBox
+            x:Name="SourceCodeEditor"
+            Grid.Row="1"
+            Grid.Column="2"
+            AcceptsReturn="True"
+            BorderThickness="0"
+            FontFamily="Consolas"
+            FontSize="14"
+            HorizontalScrollBarVisibility="Auto"
+            IsReadOnly="True"
+            Text="{Binding FullSourceCode, Mode=OneWay}"
+            VerticalScrollBarVisibility="Auto" />
 
-        <!-- Properties View -->
+        <!--  Splitter 2  -->
+        <GridSplitter
+            Grid.Row="1"
+            Grid.Column="3"
+            Width="5"
+            HorizontalAlignment="Stretch" />
+
+        <!--  Properties View  -->
         <ScrollViewer Grid.Row="1" Grid.Column="4">
             <StackPanel Margin="10">
-                <TextBlock Text="Properties" FontSize="16" FontWeight="Bold" Margin="0,0,0,10"/>
+                <TextBlock
+                    Margin="0,0,0,10"
+                    FontSize="16"
+                    FontWeight="Bold"
+                    Text="Properties" />
                 <Grid DataContext="{Binding SelectedNode}">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
-                    <TextBlock Text="Name:" FontWeight="Bold" Grid.Row="0" Grid.Column="0" Margin="0,0,10,5"/>
-                    <TextBox Text="{Binding Name, Mode=OneWay}" Grid.Row="0" Grid.Column="1" Margin="0,0,0,5" IsReadOnly="True"/>
+                    <TextBlock
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Margin="0,0,10,5"
+                        FontWeight="Bold"
+                        Text="Name:" />
+                    <TextBox
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Margin="0,0,0,5"
+                        IsReadOnly="True"
+                        Text="{Binding Name, Mode=OneWay}" />
 
-                    <TextBlock Text="Type:" FontWeight="Bold" Grid.Row="1" Grid.Column="0" Margin="0,0,10,5"/>
-                    <TextBox Text="{Binding Type, Mode=OneWay}" Grid.Row="1" Grid.Column="1" Margin="0,0,0,5" IsReadOnly="True"/>
+                    <TextBlock
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Margin="0,0,10,5"
+                        FontWeight="Bold"
+                        Text="Type:" />
+                    <TextBox
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        Margin="0,0,0,5"
+                        IsReadOnly="True"
+                        Text="{Binding Type, Mode=OneWay}" />
 
-                    <TextBlock Text="Pos:" FontWeight="Bold" Grid.Row="2" Grid.Column="0" Margin="0,0,10,5"/>
-                    <TextBox Text="{Binding SourcePos, Mode=OneWay}" Grid.Row="2" Grid.Column="1" Margin="0,0,0,5" IsReadOnly="True"/>
+                    <TextBlock
+                        Grid.Row="2"
+                        Grid.Column="0"
+                        Margin="0,0,10,5"
+                        FontWeight="Bold"
+                        Text="Pos:" />
+                    <TextBox
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        Margin="0,0,0,5"
+                        IsReadOnly="True"
+                        Text="{Binding SourcePos, Mode=OneWay}" />
 
-                    <TextBlock Text="Length:" FontWeight="Bold" Grid.Row="3" Grid.Column="0" Margin="0,0,10,5"/>
-                    <TextBox Text="{Binding Length, Mode=OneWay}" Grid.Row="3" Grid.Column="1" Margin="0,0,0,5" IsReadOnly="True"/>
+                    <TextBlock
+                        Grid.Row="3"
+                        Grid.Column="0"
+                        Margin="0,0,10,5"
+                        FontWeight="Bold"
+                        Text="Length:" />
+                    <TextBox
+                        Grid.Row="3"
+                        Grid.Column="1"
+                        Margin="0,0,0,5"
+                        IsReadOnly="True"
+                        Text="{Binding Length, Mode=OneWay}" />
 
-                    <TextBlock Text="Code:" FontWeight="Bold" Grid.Row="4" Grid.Column="0" Margin="0,0,10,5" VerticalAlignment="Top"/>
-                    <TextBox Text="{Binding Code, Mode=OneWay}" Grid.Row="4" Grid.Column="1" Margin="0,0,0,5" IsReadOnly="True" TextWrapping="Wrap" AcceptsReturn="True" MinHeight="100"/>
+                    <TextBlock
+                        Grid.Row="4"
+                        Grid.Column="0"
+                        Margin="0,0,10,5"
+                        VerticalAlignment="Top"
+                        FontWeight="Bold"
+                        Text="Code:" />
+                    <TextBox
+                        Grid.Row="4"
+                        Grid.Column="1"
+                        MinHeight="100"
+                        Margin="0,0,0,5"
+                        AcceptsReturn="True"
+                        IsReadOnly="True"
+                        Text="{Binding Code, Mode=OneWay}"
+                        TextWrapping="Wrap" />
                 </Grid>
             </StackPanel>
         </ScrollViewer>
