--- a/CSharpBible/Graphics/All_Graphics/App.xaml
+++ b/CSharpBible/Graphics/All_Graphics/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="All_Graphics.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:All_Graphics"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="All_Graphics.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:All_Graphics"
+    StartupUri="MainWindow.xaml">
+    <Application.Resources />
 </Application>
