--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileListView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileListView.xaml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <UserControl x:Class="VTileEdit.WPF.Views.Controls.TileListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,7 +11,6 @@
                        Foreground="Gray" />
             <ListBox ItemsSource="{Binding Tiles}"
                      SelectedItem="{Binding SelectedTile}"
-                     DisplayMemberPath="DisplayName"
                      DockPanel.Dock="Bottom">
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="{x:Type vm:TileViewModel}">
