--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileEditorView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileEditorView.xaml
@@ -69,9 +69,43 @@
                 <TextBlock Text="{x:Static properties:Strings.GlyphCharacterLabel}" Margin="0,0,12,8" VerticalAlignment="Center" />
                 <TextBox Grid.Column="1" Text="{Binding SelectedGlyph.CharacterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontFamily="Consolas" FontSize="16" HorizontalContentAlignment="Center" />
                 <TextBlock Grid.Row="1" Text="{x:Static properties:Strings.GlyphForegroundLabel}" Margin="0,0,12,8" VerticalAlignment="Center" />
-                <ComboBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Palette}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedForegroundSwatch}" />
+                <ComboBox Grid.Row="1"
+                          Grid.Column="1"
+                          ItemsSource="{Binding Palette}"
+                          SelectedItem="{Binding SelectedForegroundSwatch}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate DataType="{x:Type vm:ColorSwatchViewModel}">
+                            <StackPanel Orientation="Horizontal">
+                                <Rectangle Width="16"
+                                           Height="16"
+                                           Fill="{Binding Brush}"
+                                           Stroke="#33000000"
+                                           StrokeThickness="1"
+                                           Margin="0,0,6,0" />
+                                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
                 <TextBlock Grid.Row="2" Text="{x:Static properties:Strings.GlyphBackgroundLabel}" Margin="0,0,12,0" VerticalAlignment="Center" />
-                <ComboBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Palette}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedBackgroundSwatch}" />
+                <ComboBox Grid.Row="2"
+                          Grid.Column="1"
+                          ItemsSource="{Binding Palette}"
+                          SelectedItem="{Binding SelectedBackgroundSwatch}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate DataType="{x:Type vm:ColorSwatchViewModel}">
+                            <StackPanel Orientation="Horizontal">
+                                <Rectangle Width="16"
+                                           Height="16"
+                                           Fill="{Binding Brush}"
+                                           Stroke="#33000000"
+                                           StrokeThickness="1"
+                                           Margin="0,0,6,0" />
+                                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
             </Grid>
         </GroupBox>
     </Grid>
