Refactor PaletteSelectionConverter binding logic
Reworked PaletteSelectionConverter to accept explicit boolean
values for IsForegroundSelection and IsBackgroundSelection,
along with the selection mode. Updated the corresponding
MultiBinding in XAML to bind these properties directly,
improving clarity and decoupling from the ViewModel structure.

--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/PaletteSelectorView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/PaletteSelectorView.xaml
@@ -27,7 +27,8 @@
                                   Focusable="False">
                         <ToggleButton.IsChecked>
                             <MultiBinding Converter="{StaticResource PaletteSelectionConverter}" Mode="OneWay">
-                                <Binding />
+                                <Binding Path="IsForegroundSelection" />
+                                <Binding Path="IsBackgroundSelection" />
                                 <Binding ElementName="Root" Path="SelectionMode" />
                             </MultiBinding>
                         </ToggleButton.IsChecked>
