Add click handler for palette swatches to execute command
Added a Click event handler (Swatch_Clicked) to the ToggleButton in PaletteSelectorView.xaml. Implemented the corresponding method in PaletteSelectorView.xaml.cs to check for a set command and execute it with the swatch's DataContext when clicked. This enables triggering a bound command when a color swatch is selected.

--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/PaletteSelectorView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/PaletteSelectorView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:converters="clr-namespace:VTileEdit.WPF.Converters"
              xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels"
+             xmlns:self="clr-namespace:VTileEdit.WPF.Views.Controls"
              x:Name="Root">
     <UserControl.Resources>
         <converters:PaletteSelectionConverter x:Key="PaletteSelectionConverter" />
@@ -16,7 +17,7 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate DataType="{x:Type vm:ColorSwatchViewModel}">
-                    <ToggleButton Command="{Binding Command, ElementName=Root}"
+                    <ToggleButton Command="{Binding Command, RelativeSource={RelativeSource AncestorType={x:Type self:PaletteSelectorView}}}"
                                   CommandParameter="{Binding}"
                                   Margin="2"
                                   Width="50"
