--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/CharmapView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/CharmapView.xaml
@@ -2,7 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
+             xmlns:converters="clr-namespace:VTileEdit.WPF.Converters"
              x:Name="Root">
+    <UserControl.Resources>
+        <converters:CharacterSelectionConverter x:Key="CharacterSelectionConverter" />
+    </UserControl.Resources>
     <GroupBox Header="{x:Static properties:Strings.CharMapHeader}">
         <StackPanel>
             <TextBlock Text="{x:Static properties:Strings.CharMapHint}"
@@ -26,13 +30,43 @@
                                     Command="{Binding Command, ElementName=Root}"
                                     CommandParameter="{Binding}"
                                     ToolTip="{Binding}">
-                                <Button.Template>
-                                    <ControlTemplate TargetType="Button">
-                                        <Border Background="{TemplateBinding Background}" BorderBrush="#33000000" BorderThickness="1" CornerRadius="3">
-                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                        </Border>
-                                    </ControlTemplate>
-                                </Button.Template>
+                                <Button.Style>
+                                    <Style TargetType="Button">
+                                        <Setter Property="Background" Value="Transparent" />
+                                        <Setter Property="BorderBrush" Value="#33000000" />
+                                        <Setter Property="BorderThickness" Value="1" />
+                                        <Setter Property="Foreground" Value="Black" />
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="Button">
+                                                    <Border Background="{TemplateBinding Background}"
+                                                            BorderBrush="{TemplateBinding BorderBrush}"
+                                                            BorderThickness="{TemplateBinding BorderThickness}"
+                                                            CornerRadius="3">
+                                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                                    </Border>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                        <Style.Triggers>
+                                            <DataTrigger Value="True">
+                                                <DataTrigger.Binding>
+                                                    <MultiBinding Converter="{StaticResource CharacterSelectionConverter}">
+                                                        <Binding />
+                                                        <Binding Path="DataContext.SelectedGlyph.Character"
+                                                                 RelativeSource="{RelativeSource AncestorType=UserControl}"
+                                                                 TargetNullValue=" "
+                                                                 FallbackValue=" " />
+                                                    </MultiBinding>
+                                                </DataTrigger.Binding>
+                                                <Setter Property="Background" Value="#FF5A9BD8" />
+                                                <Setter Property="Foreground" Value="White" />
+                                                <Setter Property="BorderBrush" Value="#FF2E6DA4" />
+                                                <Setter Property="BorderThickness" Value="2" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Button.Style>
                             </Button>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
